--- a/style.css
+++ b/style.css
@@ -60,3 +60,21 @@ body {
 .navbar a:hover::before {
     width: 100%;
 }
+
+@media only screen and (max-width: 400px) {
+    .card {
+
+       width: 90%;
+       height: 90%;
+
+    }
+}
+@media only screen and (max-width: 800px) {
+    .card {
+
+       width: 90%;
+        height: 90%;
+
+    }
+
+}
