--- a/about.css
+++ b/about.css
@@ -96,3 +96,21 @@ img {
   .text-box p2 {
       font-size: 19px;
   }
+
+@media only screen and (max-width: 400px) {
+    .card {
+
+       width: 90%;
+       height: 90%;
+
+    }
+}
+@media only screen and (max-width: 800px) {
+    .card {
+
+       width: 90%;
+        height: 90%;
+
+    }
+
+}
