--- a/faqs.css
+++ b/faqs.css
@@ -112,3 +112,21 @@ svg {
         transform: translateY(0px);
     }
 }
+
+@media only screen and (max-width: 400px) {
+    .card {
+
+       width: 90%;
+       height: 90%;
+
+    }
+}
+@media only screen and (max-width: 800px) {
+    .card {
+
+       width: 90%;
+        height: 90%;
+
+    }
+
+}
