--- a/products.css
+++ b/products.css
@@ -183,3 +183,21 @@ label:hover{
     position: absolute;
     transition: .0s;
 }
+
+@media only screen and (max-width: 400px) {
+    .card {
+
+       width: 90%;
+       height: 90%;
+
+    }
+}
+@media only screen and (max-width: 800px) {
+    .card {
+
+       width: 90%;
+        height: 90%;
+
+    }
+
+}
